--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build && electron-builder --publish always",
-    "snapcraft": "vue-tsc --noEmit && vite build && electron-builder",
+    "snapcraft": "vue-tsc --noEmit && vite build && electron-builder -l snap",
     "preview": "vite preview"
   },
   "devDependencies": {
