--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -7,6 +7,7 @@ description: |
 base: core22
 confinement: strict
 grade: stable
+compression: lzo
 
 
 apps:
@@ -29,6 +30,7 @@ parts:
     - node/20/stable
     build-packages:
     - unzip
+    - libsecret-1-dev
     stage-packages:
     - libnss3
     - libnspr4
