--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -25,7 +25,7 @@ parts:
     source: .
     override-build: |
         npm install
-        npm run snapcraft
+        npm run snapcraft --scripts-prepend-node-path="/snap/bin/node"
     build-snaps:
     - node/20/stable
     build-packages:
