--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -31,7 +31,7 @@ parts:
     source: .
     override-build: |
         npm install
-        npm run snapcraft --scripts-prepend-node-path
+        npm run snapcraft
         mkdir ${CRAFT_PART_INSTALL}/opt -p
         cp -r dist/*unpacked ${CRAFT_PART_INSTALL}/opt/qinayacloudpro
     build-snaps:
