--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -80,6 +80,7 @@
       "provider": "github",
       "owner": "Qinaya",
       "repo": "QinayaElectron",
+      "publishAutoUpdate": true,
       "releaseType": "release"
     },
     {
